# cmdb-platform

./: .gitignore  .mcp.json  CHANGELOG.md  Makefile  README.md
.claude/: SESSION_HANDOFF.md  settings.json
api/: openapi.yaml
cmdb-core/: .gitignore  Dockerfile  Makefile  go.mod  go.sum  oapi-codegen.yaml  sqlc.yaml
cmdb-demo/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
docs/: DATABASE_SCHEMA.md  MIGRATIONS.md  OPENAPI_DRIFT.md  ROADMAP.md  SYNC_CONFLICT.md  TENANT_SCOPE.md  WEBHOOK_VERIFICATION.md  backup-recovery.md  bia-module-implementation-plan.md  (+17 more)
ingestion-engine/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
ingestion-engine/app/: config.py  database.py  dependencies.py  events.py  leader.py  main.py
ingestion-engine/app/collectors/: __init__.py  base.py  dell_ome.py  ipmi.py  manager.py  oneview.py  snmp.py  ssh.py
ingestion-engine/app/credentials/: encryption.py  provider.py
ingestion-engine/app/importers/: excel_parser.py  templates.py
ingestion-engine/app/models/: common.py  conflict.py  import_job.py
ingestion-engine/app/pipeline/: authority.py  deduplicate.py  normalize.py  processor.py  validate.py
ingestion-engine/app/routes/: collectors.py  conflicts.py  credentials.py  discovery.py  imports.py  scan_targets.py
ingestion-engine/app/tasks/: celery_app.py  discovery_task.py  import_task.py  mac_scan_task.py
ingestion-engine/db/migrations/: 000010_ingestion_tables.down.sql  000010_ingestion_tables.up.sql  000011_bmc_field_authorities.down.sql  000052_bmc_field_authorities.up.sql  README.md
ingestion-engine/tests/: conftest.py  test_authority.py  test_config.py  test_dell_ome_collector.py  test_discovery_task.py  test_encryption.py  test_excel_parser.py  test_ipmi_collector.py  test_leader.py  test_normalize.py  test_oneview_collector.py  test_processor_errors.py  test_snmp_collector.py  test_ssh_collector.py  test_tasks_retry_config.py  test_validate.py
(+986 files in other folders)
