[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-engine"
version = "0.1.0"
description = "CMDB Platform - Python Ingestion Engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "nats-py>=2.9.0",
    "openpyxl>=3.1.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "python-multipart>=0.0.18",
    "httpx>=0.28.0",
    "pysnmp>=7.0",
    "asyncssh>=2.14",
    "pyghmi>=1.5",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "tests/*",
    "app/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
include = ["app*"]
